--- a/src/Stylesheets/style.css
+++ b/src/Stylesheets/style.css
@@ -112,13 +112,6 @@ a {
   color: white;
   border: 0;
 }
-.btn {
-  color: white !important;
-}
-.btn-check:focus + .btn,
-.btn:focus {
-  box-shadow: 0 0 0 0 rgba(0, 0, 0, 0) !important;
-}
 
 .navbar {
   list-style-type: none;
@@ -145,6 +138,7 @@ a {
   .landing-page-section-wrapper {
     justify-items: center;
     width: 100%;
+    max-width: 400px;
   }
   .title-text-wrapper {
     grid-area: 1/1;
@@ -486,6 +480,7 @@ a {
 @media only screen and (max-width: 1024px) {
   .footer-social-links {
     width: 100%;
+    max-width: 400px;
   }
 }
 /* End */
@@ -651,14 +646,19 @@ a {
   .main-right-side-wrapper {
     margin: 0 auto;
     width: 100%;
+    max-width: 400px;
   }
   .right-side-heading {
-    text-align: center;
     margin-bottom: 24px;
+    font-size: 24px;
+    line-height: 32px;
+    letter-spacing: -0.06em;
+    color: #50ffca;
   }
   .register-form,
   .content-wrapper {
     align-items: center;
+    width: 100%;
   }
   .content-wrapper > div {
     width: 100%;
@@ -668,8 +668,16 @@ a {
 /* End */
 
 /* Register */
+.form-sub-text {
+  font-family: "Supreme";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 22px;
+  color: #ffffff;
+}
 .register-form {
-  width: 95%;
+  width: 100%;
   margin-top: 4vh;
   height: 70vh;
   display: flex;
@@ -817,7 +825,6 @@ a {
 .referral-link-box {
   display: inline-block;
   width: 100%;
-  height: 100%;
   border: 1px solid #50ffca;
   box-sizing: border-box;
   border-radius: 10px;
@@ -826,13 +833,11 @@ a {
   padding-left: 4%;
 }
 .referral-link-wrapper {
-  margin-top: 50px;
-  height: 48px;
   overflow: unset;
   width: 400px;
 }
 #copy-button {
-  margin-left: -48px;
+  margin-left: -47px;
   position: absolute;
   cursor: pointer;
 }
@@ -894,7 +899,7 @@ a {
 }
 .next-form-button-wrapper {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-between;
   width: 400px;
 }
@@ -966,7 +971,7 @@ a {
 .accent-button {
   background: #50ffca;
   border-radius: 8px;
-  width: 318px;
+  width: 322px;
   height: 40px;
   font-family: "Supreme";
   font-style: normal;
@@ -994,6 +999,13 @@ a {
   align-items: center;
   justify-content: center;
   cursor: pointer;
+  background: transparent;
+}
+@media (max-width: 1024px) {
+  .transparent-button,
+  .accent-button {
+    width: 100%;
+  }
 }
 .games-pill-wrapper {
   display: flex;
@@ -1062,3 +1074,7 @@ a {
   }
 }
 /* End */
+.disabled-button {
+  pointer-events: none;
+  opacity: 0.8;
+}
